C1000 How to install OPIE system.

--- a/umpc.htm
+++ b/umpc.htm
@@ -383,6 +383,13 @@ Recovery</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="umpc/c1000/gpe_setup.htm">
     安裝系統</a><br>
+  
+  &emsp;&emsp;&oplus;
+  Opie<br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="umpc/c1000/opie_setup.htm">
+    安裝系統</a><br>
 <br><br><br><br>
 
 <div id="c3000"></div>
