C1000 How to install Zubuntu system.

--- a/umpc.htm
+++ b/umpc.htm
@@ -390,6 +390,13 @@ Recovery</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="umpc/c1000/opie_setup.htm">
     安裝系統</a><br>
+
+&oplus;
+<b>Zubuntu</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="umpc/c1000/zubuntu_setup.htm">
+  安裝系統</a><br>
 <br><br><br><br>
 
 <div id="c3000"></div>
