C700 Added service pinout.

--- a/umpc.htm
+++ b/umpc.htm
@@ -161,6 +161,10 @@ Recovery</a><br>
 <a href="umpc/c700/build_encdec.htm">
 build encdec</a><br>
 
+&lowast;
+<a href="umpc/c700/spin.htm">
+電池旁邊的GPIO</a><br>
+
 &oplus;
 <b>Cacko</b><br>
 
