C3200 Fix charging issue under archlinux.

--- a/umpc/c3200/fix_charging.htm
+++ b/umpc/c3200/fix_charging.htm
@@ -48,7 +48,8 @@
 <p><b>解決無法充電的問題</b></p>
 <hr size="1">
 <p>
-使用5V 2.0A以上的充電器
+關機充電或者進入Service Menu(D+M)充電<br>
+<img src="fix_charging/1.jpg" class="maxSize">
 </p>
 
 <p>
