--- a/umpc.htm
+++ b/umpc.htm
@@ -305,6 +305,10 @@ Zaurus SL-C860</h3>
 介紹</a><br>
 
 &lowast;
+<a href="umpc/c860/batt.htm">
+更換電池</a><br>
+
+&lowast;
 <a href="umpc/c860/recovery.htm">
 Recovery</a><br>
 
