C3200 Updated battery modding.

--- a/umpc/c3200/batt.htm
+++ b/umpc/c3200/batt.htm
@@ -73,7 +73,16 @@ EA-BL11的電池已經很難購買到<br>
 <img src="batt/8.jpg" class="maxSize"><br><br>
 
 司徒發現另一個電池芯(123550)，應該可以更完美塞入這個空間<br>
-<img src="batt/9.jpg" class="maxSize">
+<img src="batt/9.jpg" class="maxSize"><br><br>
+
+司徒後來決定買一顆123450電池來試試<br>
+<img src="batt/10.jpg" class="maxSize"><br><br>
+
+大小相當剛好<br>
+<img src="batt/11.jpg" class="maxSize"><br><br>
+
+完美<br>
+<img src="batt/12.jpg" class="maxSize">
 </p><br>
 
 <p>
