C1000 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -365,6 +365,10 @@ Zaurus SL-C1000</h3>
 介紹</a><br>
 
 &lowast;
+<a href="umpc/c1000/teardown.htm">
+拆機</a><br>
+
+&lowast;
 <a href="umpc/c1000/recovery.htm">
 Recovery</a><br>
 
