C700 Fix 'DATA FORMAT ERROR' issue.

--- a/umpc.htm
+++ b/umpc.htm
@@ -165,6 +165,10 @@ build encdec</a><br>
 <a href="umpc/c700/spin.htm">
 電池旁邊的GPIO</a><br>
 
+&lowast;
+<a href="umpc/c700/fix_nand.htm">
+解決"DATA FORMAT ERROR"問題</a><br>
+
 &oplus;
 <b>Cacko</b><br>
 
