--- a/umpc.htm
+++ b/umpc.htm
@@ -522,6 +522,10 @@ build kernel 4.14.18</a><br>
   解決無法充電的問題</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="umpc/c3200/fix_usbcur.htm">
+  解決USB供電不足的問題</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="umpc/c3200/fix_fsck.htm">
   如何避免開機做fsck檢查</a><br>
 
