C3200 How to build rtl8188eus kernel module.

--- a/umpc.htm
+++ b/umpc.htm
@@ -486,6 +486,10 @@ Recovery</a><br>
 修改USB限流電阻</a><br>
 
 &lowast;
+<a href="umpc/c3200/build_rtl8188eus.htm">
+build rtl8188eus</a><br>
+
+&lowast;
 <a href="umpc/c3200/build_kernel-3.11.3.htm">
 build kernel 3.11.3</a><br>
 
