C3200 How to build mt7601usta kernel module.

--- a/umpc.htm
+++ b/umpc.htm
@@ -490,6 +490,10 @@ Recovery</a><br>
 build rtl8188eus</a><br>
 
 &lowast;
+<a href="umpc/c3200/build_mt7601usta.htm">
+build mt7601usta</a><br>
+
+&lowast;
 <a href="umpc/c3200/build_kernel-3.11.3.htm">
 build kernel 3.11.3</a><br>
 
