--- a/umpc/c3200/build_mt7601usta.htm
+++ b/umpc/c3200/build_mt7601usta.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Zaurus SL-C3200</h3>
-<p><b>build rtl8188eus</b></p>
+<p><b>build mt7601usta</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
@@ -68,14 +68,13 @@ $ mv linux-3.11.3_c3x00_defconfig .config
 $ ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabi- make all -j4
 
 $ cd /tmp
-$ git clone https://github.com/quickreflex/rtl8188eus
-$ cd rtl8188eus
-$ vim Makefile +1905
-    ARCH=arm
+$ git clone https://github.com/art567/mt7601usta
+$ cd mt7601usta/src
+$ vim Makefile +339
     CROSS_COMPILE=arm-none-linux-gnueabi- 
-    KSRC=/tmp/linux-3.11.3-borzoi
+    LINUX_SRC=/tmp/linux-3.11.3-borzoi
 
-$ make -j4
+$ ARCH=arm make -j4
 </pre><br>
 
 <p>
