C3200 USB wifi modding.

--- a/umpc.htm
+++ b/umpc.htm
@@ -474,6 +474,10 @@ Zaurus SL-C3200</h3>
 更換電池</a><br>
 
 &lowast;
+<a href="umpc/c3200/wifi.htm">
+Wifi改造</a><br>
+
+&lowast;
 <a href="umpc/c3200/recovery.htm">
 Recovery</a><br>
 
