C3200 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -470,6 +470,10 @@ Zaurus SL-C3200</h3>
 介紹</a><br>
 
 &lowast;
+<a href="umpc/c3200/teardown.htm">
+拆機</a><br>
+
+&lowast;
 <a href="umpc/c3200/batt.htm">
 更換電池</a><br>
 
