C860 How to calibrate battery.

--- a/umpc.htm
+++ b/umpc.htm
@@ -316,6 +316,10 @@ Zaurus SL-C860</h3>
 <a href="umpc/c860/recovery.htm">
 Recovery</a><br>
 
+&lowast;
+<a href="umpc/c860/calibre.htm">
+如何校準電池</a><br>
+
 &oplus;
 <b>Cacko</b><br>
 
