C3200 How to calibrate battery.

--- a/umpc.htm
+++ b/umpc.htm
@@ -494,6 +494,10 @@ Recovery</a><br>
 替換內部HDD</a><br>
 
 &lowast;
+<a href="umpc/c3200/calibre.htm">
+如何校準電池</a><br>
+
+&lowast;
 <a href="umpc/c3200/fix_usbr.htm">
 修改USB限流電阻</a><br>
 
