C3200 Fix 'coherent pool is too small' issue.

--- a/umpc.htm
+++ b/umpc.htm
@@ -562,6 +562,10 @@ build kernel 4.14.18</a><br>
   解決ext4無法被kexecboot識別的問題</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="umpc/c3200/fix_dma.htm">
+  解決"coherent pool is too small"問題</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="umpc/c3200/fix_usb.htm">
   解決"rejected 1 configuration due to insufficient available bus power"問題</a><br>
 <br><br><br><br>
