C860 How to install debian system.

--- a/umpc.htm
+++ b/umpc.htm
@@ -328,11 +328,29 @@ Recovery</a><br>
   安裝系統</a><br>
 
 &oplus;
+<b>Debian</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="umpc/c860/debian_setup.htm">
+  安裝系統</a><br>
+
+&oplus;
 <b>pdaXrom</b><br>
 
   &emsp;&emsp;&lowast;
   <a href="umpc/c860/pdaxrom_setup.htm">
   安裝系統</a><br>
+
+&oplus;
+<b>Zubuntu</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="umpc/c860/zubuntu_setup.htm">
+  安裝系統</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="umpc/c860/zubuntu_fix_clk.htm">
+  解決屏幕閃爍問題</a><br>
 
 &oplus;
 <b>OpenZaurus</b><br>
@@ -350,17 +368,6 @@ Recovery</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="umpc/c860/opie_setup.htm">
     安裝系統</a><br>
-
-&oplus;
-<b>Zubuntu</b><br>
-
-  &emsp;&emsp;&lowast;
-  <a href="umpc/c860/zubuntu_setup.htm">
-  安裝系統</a><br>
-  
-  &emsp;&emsp;&lowast;
-  <a href="umpc/c860/zubuntu_fix_clk.htm">
-  解決屏幕閃爍問題</a><br>
 <br><br><br><br>
 
 <div id="c1000"></div>
