--- a/umpc/c860/debian_setup.htm
+++ b/umpc/c860/debian_setup.htm
@@ -77,8 +77,18 @@
 5. 透過選單啟動<b>Debian 6</b><br>
 6. 帳號使用user:user(root:root)<br>
 <img src="debian_setup/1.jpg" class="maxSize"><br>
-<img src="debian_setup/2.jpg" class="maxSize">
+<img src="debian_setup/2.jpg" class="maxSize"><br><br>
+
+按鍵對應：
 </p>
+<table>
+<tr><th>按鍵</th><th>功能</th></tr>
+<tr><td>記號</td><td>CTRL</td></tr>
+<tr><td>漢字</td><td>ALT</td></tr>
+<tr><td>CTRL + ALT + Fn</th><td>Terminal</td></tr>
+<tr><td>Fn + LEFT</th><td>Terminal 1~7</td></tr>
+<tr><td>Fn + RIGHT</th><td>Terminal 1~7</td></tr>
+</table><br>
 
 <p>
 <br><a href="../../umpc.htm">返回上一頁</a>
