--- a/umpc.htm
+++ b/umpc.htm
@@ -469,6 +469,10 @@ Zaurus SL-C3100</h3>
 &lowast;
 <a href="umpc/c3100/review.htm">
 介紹</a><br>
+
+&lowast;
+<a href="umpc/c3100/teardown.htm">
+拆機</a><br>
 <br><br><br><br>
 
 <div id="c3200"></div>
