C3100 Fix usb current issue.

--- a/umpc/c3100/fix_usbr.htm
+++ b/umpc/c3100/fix_usbr.htm
@@ -44,17 +44,27 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Zaurus SL-C3200</h3>
+<h3>Zaurus SL-C3100</h3>
 <p><b>修改USB限流電阻</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
 1. <a href="http://www.penguin.cz/~utx/zaurus/www.iral.com/~albertr/linux/zaurus/wireless/">zaurus_wireless</a><br><br>
 
+限流電阻：
+</p>
+<table>
+<tr><th>電流</th><th>電阻值</th></tr>
+<tr><td>400 ~ 450mA</td><td>2K</td></tr>
+<tr><td>500mA</td><td>1.6K</td></tr>
+<tr><td>600 ~ 650mA</td><td>1K</td></tr>
+</table><br>
+
+<p>
 TOKO TK3850(PCL腳位)預設是連接5.7K電阻到GND，提供200mA電流<br>
 <img src="fix_usbr/1.jpg" class="maxSize"><br><br>
 
-依據網路上的資料，如果連接到GND，則沒有限制最大電流<br>
+司徒替換成1K電阻<br>
 <img src="fix_usbr/2.jpg" class="maxSize">
 </p>
 
