C3100 How to replace battery.

--- a/umpc.htm
+++ b/umpc.htm
@@ -475,6 +475,14 @@ Zaurus SL-C3100</h3>
 拆機</a><br>
 
 &lowast;
+<a href="umpc/c3100/batt.htm">
+更換電池</a><br>
+
+&lowast;
+<a href="umpc/c3100/replace_hdd.htm">
+替換內部HDD</a><br>
+
+&lowast;
 <a href="umpc/c3100/fix_usbr.htm">
 修改USB限流電阻</a><br>
 <br><br><br><br>
