C860 How to build kernel 3.11.3.

--- a/umpc.htm
+++ b/umpc.htm
@@ -320,6 +320,10 @@ Recovery</a><br>
 <a href="umpc/c860/calibre.htm">
 如何校準電池</a><br>
 
+&lowast;
+<a href="umpc/c860/build_kernel-3.11.3.htm">
+build kernel 3.11.3</a><br>
+
 &oplus;
 <b>Cacko</b><br>
 
