C860 How to program framebuffer in C.

--- a/umpc.htm
+++ b/umpc.htm
@@ -332,13 +332,6 @@ build kernel 3.11.3</a><br>
   安裝系統</a><br>
 
 &oplus;
-<b>Debian</b><br>
-
-  &emsp;&emsp;&lowast;
-  <a href="umpc/c860/debian_setup.htm">
-  安裝系統</a><br>
-
-&oplus;
 <b>pdaXrom</b><br>
 
   &emsp;&emsp;&lowast;
@@ -372,6 +365,20 @@ build kernel 3.11.3</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="umpc/c860/opie_setup.htm">
     安裝系統</a><br>
+
+&oplus;
+<b>Debian</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="umpc/c860/debian_setup.htm">
+  安裝Debian6</a><br>
+
+  &emsp;&emsp;&oplus;
+  <b>C/C++</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="umpc/c860/cpp_fb.htm">
+     Framebuffer</a><br>
 <br><br><br><br>
 
 <div id="c1000"></div>
