--- a/umpc/c860/cpp_fb.htm
+++ b/umpc/c860/cpp_fb.htm
@@ -44,51 +44,42 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Zaurus SL-C860 &gt;&gt; Debian</h3>
-<p><b>安裝Debian6</b></p>
+<h3>Zaurus SL-C860 &gt;&gt; Debian &gt;&gt; C/C++</h3>
+<p><b>Framebuffer</b></p>
 <hr size="1">
 <p>
-參考資訊：<br>
-1. <a href="https://files.nazaryev.ru/misc/zaurus/zubuntu/">zubuntu</a><br>
-2. <a href="https://sites.google.com/site/bakaralijedhava/bakarali/ubuntu-8-04-on-zaurus">ubuntu-8-04-on-zaurus</a><br><br>
-
-安裝開機選單：<br>
-1. 下載<a href="https://github.com/steward-fu/sl-c700/releases/download/v1.8/zubuntu8.04_updater.sh">zubuntu8.04_updater.sh</a>(重新命名成updater.sh)<br>
-2. 下載<a href="https://github.com/steward-fu/sl-c700/releases/download/v1.8/zubuntu8.04_zImage_c7x0-c860.bin">zubuntu8.04_zImage_c7x0-c860.bin</a>(重新命名成zImage)<br>
-3. 格式化SDCard(1GB)成FAT16檔案系統且不要有磁碟標籤<br>
-4. 將updater.sh、zImage複製到SDCard根目錄<br>
-5. 將SDCard插入機器<br>
-6. 按住<b>OK</b>並且開機<br>
-<img src="cacko_setup/1.jpg" class="maxSize"><br>
-7. 選擇第四個項目<br>
-<img src="cacko_setup/2.jpg" class="maxSize"><br>
-8. 選擇SD<br>
-<img src="cacko_setup/3.jpg" class="maxSize"><br>
-9. 選擇Y<br>
-<img src="cacko_setup/4.jpg" class="maxSize"><br>
-<img src="zubuntu_setup/1.jpg" class="maxSize"><br>
-<img src="zubuntu_setup/2.jpg" class="maxSize"><br><br>
-
-安裝系統：<br>
-1. 下載<a href="https://github.com/steward-fu/sl-c700/releases/download/v1.12/debian6_c860.tar.gz">debian6_c860.tar.gz</a><br>
-2. 格式化SDCard(4GB)成ext3<br>
-3. 將debian6_c860.tar.gz解壓縮至SDCard根目錄<br>
-4. 將SDCard插入機器<br>
-5. 透過選單啟動<b>Debian 6</b><br>
-6. 帳號使用user:user(root:root)<br>
-<img src="debian_setup/1.jpg" class="maxSize"><br>
-<img src="debian_setup/2.jpg" class="maxSize"><br><br>
-
-按鍵對應：
+main.c
 </p>
-<table>
-<tr><th>按鍵</th><th>功能</th></tr>
-<tr><td>記號</td><td>CTRL</td></tr>
-<tr><td>漢字</td><td>ALT</td></tr>
-<tr><td>CTRL + ALT + Fn</th><td>Terminal</td></tr>
-<tr><td>Fn + LEFT</th><td>Terminal 1~7</td></tr>
-<tr><td>Fn + RIGHT</th><td>Terminal 1~7</td></tr>
-</table><br>
+<pre class="brush:cpp">
+#include &lt;stdio.h&gt;
+#include &lt;stdlib.h&gt;
+#include &lt;fcntl.h&gt;
+#include &lt;unistd.h&gt;
+#include &lt;linux/fb.h&gt;
+#include &lt;sys/ioctl.h&gt;
+#include &lt;SDL.h&gt;
+
+int main(int argc, char** argv)
+{
+    uint32_t cnt=0;
+    SDL_Surface* screen=NULL;
+    uint32_t col[]={0xf800, 0x7e0, 0x001f};
+    int zero=0, fd = open("/dev/fb0", O_RDWR);
+
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_SWSURFACE | SDL_DOUBLEBUF);
+    while(cnt &lt; 300){
+        cnt+= 1;
+        SDL_FillRect(screen, &amp;screen-&gt;clip_rect, col[cnt % 3]);
+        SDL_Flip(screen);
+
+        ioctl(fd, FBIO_WAITFORVSYNC, &amp;zero);
+    }
+    SDL_Quit();
+    close(fd);
+    return 0;
+}
+</pre><br>
 
 <p>
 <br><a href="../../umpc.htm">返回上一頁</a>
