--- a/umpc.htm
+++ b/umpc.htm
@@ -371,7 +371,11 @@ build kernel 3.11.3</a><br>
 
   &emsp;&emsp;&lowast;
   <a href="umpc/c860/debian_setup.htm">
-  安裝Debian6</a><br>
+  安裝Debian 6</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="umpc/c860/debian7_setup.htm">
+  安裝Debian 7</a><br>
 
   &emsp;&emsp;&oplus;
   <b>C/C++</b><br>
