--- a/umpc/c860/debian7_setup.htm
+++ b/umpc/c860/debian7_setup.htm
@@ -45,39 +45,34 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Zaurus SL-C860 &gt;&gt; Debian</h3>
-<p><b>安裝Debian 6</b></p>
+<p><b>安裝Debian 7</b></p>
 <hr size="1">
 <p>
-參考資訊：<br>
-1. <a href="https://files.nazaryev.ru/misc/zaurus/zubuntu/">zubuntu</a><br>
-2. <a href="https://sites.google.com/site/bakaralijedhava/bakarali/ubuntu-8-04-on-zaurus">ubuntu-8-04-on-zaurus</a><br><br>
-
 安裝開機選單：<br>
-1. 下載<a href="https://github.com/steward-fu/sl-c700/releases/download/v1.8/zubuntu8.04_updater.sh">zubuntu8.04_updater.sh</a>(重新命名成updater.sh)<br>
-2. 下載<a href="https://github.com/steward-fu/sl-c700/releases/download/v1.8/zubuntu8.04_zImage_c7x0-c860.bin">zubuntu8.04_zImage_c7x0-c860.bin</a>(重新命名成zImage)<br>
-3. 格式化SDCard(1GB)成FAT16檔案系統且不要有磁碟標籤<br>
-4. 將updater.sh、zImage複製到SDCard根目錄<br>
-5. 將SDCard插入機器<br>
-6. 按住<b>OK</b>並且開機<br>
+1. 下載<a href="https://github.com/steward-fu/sl-c700/releases/download/v1.12/installkit-c7x0.tar.gz">installkit-c7x0.tar.gz</a><br>
+2. 格式化SDCard(1GB)成FAT16檔案系統且不要有磁碟標籤<br>
+3. 將installkit-c7x0.tar.gz解壓縮到SDCard<br>
+4. 將SDCard插入機器<br>
+5. 按住<b>OK</b>並且開機<br>
 <img src="cacko_setup/1.jpg" class="maxSize"><br>
-7. 選擇第四個項目<br>
+6. 選擇第四個項目<br>
 <img src="cacko_setup/2.jpg" class="maxSize"><br>
-8. 選擇SD<br>
+7. 選擇SD<br>
 <img src="cacko_setup/3.jpg" class="maxSize"><br>
-9. 選擇Y<br>
+8. 選擇Y<br>
 <img src="cacko_setup/4.jpg" class="maxSize"><br>
-<img src="zubuntu_setup/1.jpg" class="maxSize"><br>
-<img src="zubuntu_setup/2.jpg" class="maxSize"><br><br>
+<img src="debian7_setup/1.jpg" class="maxSize"><br><br>
 
 安裝系統：<br>
-1. 下載<a href="https://github.com/steward-fu/sl-c700/releases/download/v1.12/debian6_c860.tar.gz">debian6_c860.tar.gz</a><br>
-2. 格式化SDCard(4GB)成ext3<br>
-3. 將debian6_c860.tar.gz解壓縮至SDCard根目錄<br>
-4. 將SDCard插入機器<br>
-5. 透過選單啟動<b>Debian 6</b><br>
-6. 帳號使用user:user(root:root)<br>
-<img src="debian_setup/1.jpg" class="maxSize"><br>
-<img src="debian_setup/2.jpg" class="maxSize"><br><br>
+1. 下載<a href="https://github.com/steward-fu/sl-c700/releases/download/v1.12/adds_c860.tar.gz">adds_c860.tar.gz</a><br>
+2. 下載<a href="https://github.com/steward-fu/sl-c700/releases/download/v1.12/debian7_base.tar.gz">debian7_base.tar.gz</a><br>
+3. 格式化SDCard(4GB)成ext4，格式化記得使用(-O^metadata_csum)<br>
+4. 將debian7_base.tar.gz、adds_c860.tar.gz解壓縮至SDCard根目錄<br>
+5. 將SDCard插入機器<br>
+6. 透過選單啟動<b>Debian 7</b><br>
+7. 帳號使用root:root<br>
+<img src="debian7_setup/2.jpg" class="maxSize"><br>
+<img src="debian7_setup/3.jpg" class="maxSize"><br><br>
 
 按鍵對應：
 </p>
@@ -85,7 +80,6 @@
 <tr><th>按鍵</th><th>功能</th></tr>
 <tr><td>記號</td><td>CTRL</td></tr>
 <tr><td>漢字</td><td>ALT</td></tr>
-<tr><td>CTRL + ALT + Fn</th><td>Terminal</td></tr>
 <tr><td>Fn + LEFT</th><td>Terminal 1~7</td></tr>
 <tr><td>Fn + RIGHT</th><td>Terminal 1~7</td></tr>
 </table><br>
