C860 Fix screen tearing issue.

--- a/umpc.htm
+++ b/umpc.htm
@@ -377,6 +377,10 @@ build kernel 3.11.3</a><br>
   <a href="umpc/c860/debian7_setup.htm">
   安裝Debian 7</a><br>
 
+  &emsp;&emsp;&lowast;
+  <a href="umpc/c860/fix_screentearing.htm">
+  緩解Screen Tearing問題</a><br>
+
   &emsp;&emsp;&oplus;
   <b>C/C++</b><br>
 
