Docker Fix 'OS type not recognized' issue.

--- a/system.htm
+++ b/system.htm
@@ -438,6 +438,10 @@ docker.sock</a><br>
 <a href="system/docker/fix_sending.htm">
 為何"Sending build context to Docker daemon"會送很大的檔案</a><br>
 
+&lowast;
+<a href="system/docker/fix_kvm.htm">
+解決"Temporary Error: Error configuring auth on host: OS type not recognized"問題</a><br>
+
 &oplus;
 <b>Container Escape</b><br>
 
