Pro1 X How to install lxc templates.

--- a/phone.htm
+++ b/phone.htm
@@ -1980,6 +1980,13 @@ F(x)tec Pro1 X</h3>
   <a href="phone/pro1x/dd_fix_settings.htm">
   解決Settings無法開啟的問題</a><br>  
 
+  &emsp;&emsp;&oplus;
+  LXC<br>
+
+  &emsp;&emsp;&emsp;&emsp;&lowast;
+  <a href="phone/pro1x/lxc_template.htm">
+  安裝Template</a><br>  
+
 &oplus;
 <b>Ubuntu Touch</b><br>
 
