Pro1 X Added apt command.

--- a/phone.htm
+++ b/phone.htm
@@ -1985,7 +1985,7 @@ F(x)tec Pro1 X</h3>
 
   &emsp;&emsp;&emsp;&emsp;&lowast;
   <a href="phone/pro1x/lxc_template.htm">
-  安裝Template</a><br>  
+  安裝Templates</a><br>  
 
 &oplus;
 <b>Ubuntu Touch</b><br>
