--- a/phone/pro1x/lxc_template.htm
+++ b/phone/pro1x/lxc_template.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>F(x)tec Pro1 X &gt;&gt; Droidian &gt;&gt; LXC</h3>
-<p><b>安裝Template</b></p>
+<p><b>安裝Templates</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
@@ -64,7 +64,10 @@ $ sudo make install
 $ sudo cp -a /usr/local/share/lxc/* /usr/share/lxc
 $ sudo rm -rf /usr/local/share/lxc
 $ sudo ln -s /usr/share/lxc /usr/local/share/lxc
-</pre><br>
+</pre>
+<p>
+P.S. <b>apt-get install lxc-templates</b>
+</p>
 
 <p>
 <br><a href="../../phone.htm">返回上一頁</a>
