C3100 How to install cacko system.

--- a/umpc.htm
+++ b/umpc.htm
@@ -504,6 +504,13 @@ Zaurus SL-C3100</h3>
 &lowast;
 <a href="umpc/c3100/fix_usbr.htm">
 修改USB限流電阻</a><br>
+
+&oplus;
+<b>Cacko</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="umpc/c3100/cacko_setup.htm">
+  安裝系統</a><br>
 <br><br><br><br>
 
 <div id="c3200"></div>
