C3100 How to install pdaXrom system.

--- a/umpc.htm
+++ b/umpc.htm
@@ -511,6 +511,13 @@ Zaurus SL-C3100</h3>
   &emsp;&emsp;&lowast;
   <a href="umpc/c3100/cacko_setup.htm">
   安裝系統</a><br>
+
+&oplus;
+<b>pdaXrom</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="umpc/c3100/pdaxrom_setup.htm">
+  安裝系統</a><br>
 <br><br><br><br>
 
 <div id="c3200"></div>
