Kubernetes How to install kubernetes on ubuntu 20.04 or 18.04.

--- a/system.htm
+++ b/system.htm
@@ -79,6 +79,7 @@
   <a href="#windows"><img src="img/photos/windows.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Windows"/></a>
   <a href="#docker"><img src="img/photos/docker.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Docker"/></a>
   <a href="#podman"><img src="img/photos/podman.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Podman"/></a>
+  <a href="#kube"><img src="img/photos/kube.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Kubernetes"/></a>
 </p>
 </div>
 
@@ -465,6 +466,17 @@ podman.sock</a><br>
 &lowast;
 <a href="system/podman/fix_sock.htm">
 解決沒有podman.socket的問題</a><br>
+<br><br><br><br>
+
+<div id="kube"></div>
+<h3><img src="img/photos/kube.jpg" class="floatLeft"/>
+Kubernetes</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="system/kube/install_ubuntu.htm">
+如何安裝在Ubuntu系統上(VMware)</a><br>
+
 <br><br><br><br>
 
 </p>
