C3100 How to do recovery.

--- a/umpc.htm
+++ b/umpc.htm
@@ -498,6 +498,10 @@ Zaurus SL-C3100</h3>
 更換電池</a><br>
 
 &lowast;
+<a href="umpc/c3100/recovery.htm">
+Recovery</a><br>
+
+&lowast;
 <a href="umpc/c3100/replace_hdd.htm">
 替換內部HDD</a><br>
 
