--- a/phone.htm
+++ b/phone.htm
@@ -1983,9 +1983,16 @@ F(x)tec Pro1 X</h3>
   &emsp;&emsp;&oplus;
   LXC<br>
 
-  &emsp;&emsp;&emsp;&emsp;&lowast;
-  <a href="phone/pro1x/lxc_template.htm">
-  安裝Templates</a><br>  
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pro1x/lxc_template.htm">
+    安裝Templates</a><br>  
+
+  &emsp;&emsp;&oplus;
+  Waydroid<br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pro1x/wd_fix_clip.htm">
+    解決"Failed to start Clipboard manager service"問題</a><br>  
 
 &oplus;
 <b>Ubuntu Touch</b><br>
