C3100 How to install ubuntu system.

--- a/umpc.htm
+++ b/umpc.htm
@@ -522,6 +522,13 @@ Recovery</a><br>
   &emsp;&emsp;&lowast;
   <a href="umpc/c3100/pdaxrom_setup.htm">
   安裝系統</a><br>
+
+&oplus;
+<b>Zubuntu</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="umpc/c3100/zubuntu_setup.htm">
+  安裝系統</a><br>
 <br><br><br><br>
 
 <div id="c3200"></div>
