Pro1 X How to do backup via edl tool.

--- a/phone.htm
+++ b/phone.htm
@@ -1958,6 +1958,10 @@ F(x)tec Pro1 X</h3>
 介紹</a><br>
 
 &lowast;
+<a href="phone/pro1x/backup.htm">
+如何透過edl備份</a><br>
+
+&lowast;
 <a href="phone/pro1x/fix_partition.htm">
 解決"FAILED (remote: Partition not found)"問題</a><br>
 
