Pro1 X How to flash sailfish os.

--- a/phone.htm
+++ b/phone.htm
@@ -2004,6 +2004,13 @@ F(x)tec Pro1 X</h3>
   &emsp;&emsp;&lowast;
   <a href="phone/pro1x/install_ubuntu.htm">
   安裝系統</a><br>
+
+&oplus;
+<b>Sailfish</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="phone/pro1x/install_sailfish.htm">
+  安裝系統</a><br>
 <br><br><br><br>
 
 <div id="pro1"></div>
