Pro1 X How to install lxc on sailfish.

--- a/phone.htm
+++ b/phone.htm
@@ -2011,6 +2011,10 @@ F(x)tec Pro1 X</h3>
   &emsp;&emsp;&lowast;
   <a href="phone/pro1x/install_sailfish.htm">
   安裝系統</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="phone/pro1x/so_lxc.htm">
+  如何安裝LXC</a><br>
 <br><br><br><br>
 
 <div id="pro1"></div>
