--- a/phone.htm
+++ b/phone.htm
@@ -1970,6 +1970,13 @@ F(x)tec Pro1 X</h3>
 解決"error: Cannot generate image for userdata"問題</a><br>
 
 &oplus;
+<b>Android</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="phone/pro1x/install_android.htm">
+  安裝系統(QFIL)</a><br>
+
+&oplus;
 <b>Droidian</b><br>
 
   &emsp;&emsp;&lowast;
@@ -1999,13 +2006,6 @@ F(x)tec Pro1 X</h3>
     解決"Failed to start Clipboard manager service"問題</a><br>  
 
 &oplus;
-<b>Ubuntu Touch</b><br>
-
-  &emsp;&emsp;&lowast;
-  <a href="phone/pro1x/install_ubuntu.htm">
-  安裝系統</a><br>
-
-&oplus;
 <b>Sailfish</b><br>
 
   &emsp;&emsp;&lowast;
@@ -2015,6 +2015,13 @@ F(x)tec Pro1 X</h3>
   &emsp;&emsp;&lowast;
   <a href="phone/pro1x/so_lxc.htm">
   如何安裝LXC</a><br>
+
+&oplus;
+<b>Ubuntu Touch</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="phone/pro1x/install_ubuntu.htm">
+  安裝系統</a><br>
 <br><br><br><br>
 
 <div id="pro1"></div>
