Pro1 X Updated flash steps.

--- a/phone/pro1x/install_sailfish.htm
+++ b/phone/pro1x/install_sailfish.htm
@@ -73,6 +73,9 @@ $ export PATH=/tmp/platform-tools:$PATH
 
 $ unzip artifacts.zip
 $ cd sfe-halium-qx1050-4.4.0.72-devel-20221016
+$ vim flash.sh +47
+    #fastboot set_active a || fastboot --set-active=a
+
 $ ./flash.sh
 </pre><br>
 
