Pro1 X Updated flash steps.

--- a/phone/pro1x/install_sailfish.htm
+++ b/phone/pro1x/install_sailfish.htm
@@ -73,13 +73,11 @@ $ export PATH=/tmp/platform-tools:$PATH
 
 $ unzip artifacts.zip
 $ cd sfe-halium-qx1050-4.4.0.72-devel-20221016
-$ vim flash.sh +47
-    #fastboot set_active a || fastboot --set-active=a
-
 $ ./flash.sh
-</pre><br>
-
+</pre>
 <p>
+P.S. 寫入userdata時，fastboot會卡住，直接重新啟動手機就可以(Vol- + Power)<br><br>
+
 完成<br>
 <img src="install_sailfish/1.jpg" class="maxSize">
 </p>
