Pro1 X Updated steps.

--- a/phone/pro1x/install_ubuntu.htm
+++ b/phone/pro1x/install_ubuntu.htm
@@ -60,7 +60,7 @@ $ sudo fastboot flashing unlock
 <p>
 <img src="install_ubuntu/1.jpg" class="maxSize"><br><br>
 
-2. 下載<a href="https://gitlab.com/ubports/porting/community-ports/android11/fxtec-pro1x/fxtec-pro1x/-/jobs">Ubuntu Touch</a><br>
+2. 下載<a href="https://gitlab.com/ubports/porting/community-ports/android11/fxtec-pro1x/fxtec-pro1x/-/jobs">Ubuntu Touch(devel-flashable)</a><br>
 3. 命令如下：
 </p>
 <pre>
@@ -82,7 +82,7 @@ $ fastboot flash dtbo_a dtbo.img
 $ fastboot reboot
 </pre>
 <p>
-P.S. 需要下載userdata的安裝包才會有userdata.img檔案，目前WIFI無法正常運作<br><br>
+P.S. 如果原本系統是Android，才需要做<b>fastboot format:ext4 userdata</b><br><br>
 
 完成<br>
 <img src="install_ubuntu/2.jpg" class="maxSize">
