Pro1 X Fix 'Flashing of userdata is not allowed in snapshotted state' issue.

--- a/phone.htm
+++ b/phone.htm
@@ -1969,6 +1969,10 @@ F(x)tec Pro1 X</h3>
 <a href="phone/pro1x/fix_userdata.htm">
 解決"error: Cannot generate image for userdata"問題</a><br>
 
+&lowast;
+<a href="phone/pro1x/fix_snap.htm">
+解決"Flashing of userdata is not allowed in snapshotted state"問題</a><br>
+
 &oplus;
 <b>Android</b><br>
 
