Pro1 X Added reference.

--- a/phone/pro1x/fix_snap.htm
+++ b/phone/pro1x/fix_snap.htm
@@ -49,6 +49,9 @@
 <p><b>解決"Flashing of userdata is not allowed in snapshotted state"問題</b></p>
 <hr size="1">
 <p>
+參考資料：<br>
+1. <a href="https://forum.sailfishos.org/t/flashing-xperia-10iii-fails-what-to-do/11735/2">flashing-xperia-10iii-fails-what-to-do</a><br><br>
+
 問題：
 </p>
 <pre>
