Pro1 X Fix 'pro1-x is always in edl mode' issue.

--- a/phone.htm
+++ b/phone.htm
@@ -1962,6 +1962,10 @@ F(x)tec Pro1 X</h3>
 如何透過edl備份</a><br>
 
 &lowast;
+<a href="phone/pro1x/fix_edl.htm">
+解決開機一直處於edl模式的問題</a><br>
+
+&lowast;
 <a href="phone/pro1x/fix_partition.htm">
 解決"FAILED (remote: Partition not found)"問題</a><br>
 
