--- a/phone/pro1x/fix_edl.htm
+++ b/phone/pro1x/fix_edl.htm
@@ -46,7 +46,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>F(x)tec Pro1 X</h3>
-<p><b>如何透過edl備份</b></p>
+<p><b>解決開機一直處於edl模式的問題</b></p>
 <hr size="1">
 <p>
 參考資料：<br>
@@ -72,11 +72,16 @@ $ sudo cp Drivers/50-android.rules /etc/udev/rules.d
 $ python setup.py build
 $ sudo python setup.py install
 
-$ ./edl r persist persist_backup.img
-$ ./edl r modemst2 modemst2_backup.img
-$ ./edl r modemst1 modemst1_backup.img
-$ ./edl r fsc fsc_backup.img
-$ ./edl r fsg fsg_backup.img
+$ ./edl w persist ./persist_backup.img --memory=ufs
+$ sleep 3
+$ ./edl w modemst2 ./modemst2_backup.img --memory=ufs
+$ sleep 3
+$ ./edl w modemst1 ./modemst1_backup.img --memory=ufs
+$ sleep 3
+$ ./edl w fsc ./fsc_backup.img --memory=ufs
+$ sleep 3
+$ ./edl w fsg ./fsg_backup.img --memory=ufs
+$ sleep 3
 
 $ sha1sum *.img
     67dfd19f3eb3649d6f3f6631e44d0bd36b8d8d19  fsc_backup.img
