Pro1 X Updated installation steps.

--- a/phone/pro1x/install_sailfish.htm
+++ b/phone/pro1x/install_sailfish.htm
@@ -79,7 +79,8 @@ $ ./flash.sh
 P.S. 寫入userdata時，fastboot會卡住，直接重新啟動手機就可以(Vol- + Power)<br><br>
 
 完成<br>
-<img src="install_sailfish/1.jpg" class="maxSize">
+<img src="install_sailfish/1.jpg" class="maxSize"><br>
+P.S. 進入系統後，記得使用<b>resize2fs /dev/sda13</b>擴展空間
 </p>
 
 <p>
