Pro1 X How to adjust display scale dynamically.

--- a/phone.htm
+++ b/phone.htm
@@ -1996,6 +1996,10 @@ F(x)tec Pro1 X</h3>
   如何控制鍵盤背光</a><br>  
 
   &emsp;&emsp;&lowast;
+  <a href="phone/pro1x/dd_scale.htm">
+  如何調整Display Scale</a><br>  
+
+  &emsp;&emsp;&lowast;
   <a href="phone/pro1x/dd_fix_settings.htm">
   解決Settings無法開啟的問題</a><br>  
 
