Pro1 X How to set default display scale.

--- a/phone.htm
+++ b/phone.htm
@@ -2003,6 +2003,10 @@ F(x)tec Pro1 X</h3>
   <a href="phone/pro1x/dd_fix_settings.htm">
   解決Settings無法開啟的問題</a><br>  
 
+  &emsp;&emsp;&lowast;
+  <a href="phone/pro1x/dd_defscale.htm">
+  如何調整開機預設的Display Scale</a><br>  
+
   &emsp;&emsp;&oplus;
   LXC<br>
 
