Miyoo Mini Updated build steps for SDL2.

--- a/handheld/miyoo-mini/parasyte_build_sdl2.htm
+++ b/handheld/miyoo-mini/parasyte_build_sdl2.htm
@@ -48,6 +48,9 @@
 <p><b>build sdl2</b></p>
 <hr size="1">
 <p>
+參考資訊：<br>
+1. <a href="https://github.com/steward-fu/miyoo-mini/issues/2">eglUpdateBufferSettings issue</a><br><br>
+
 步驟如下：
 </p>
 <pre>
@@ -74,9 +77,10 @@ $ ./autogen.sh
 $ ./configure --disable-joystick-virtual --disable-sensor --disable-power --disable-alsa --disable-diskaudio --disable-video-x11 --disable-video-wayland --disable-video-kmsdrm --disable-video-vulkan --disable-dbus --disable-ime --disable-fcitx --disable-hidapi --disable-pulseaudio --disable-sndio --disable-libudev --disable-jack --disable-video-opengl --disable-video-opengles --disable-video-opengles2 --disable-oss --disable-dummyaudio --disable-video-dummy --host=${HOST}
 $ make clean
 $ make -j
-</pre><br>
-
+</pre>
 <p>
+P.S. 假如不需要OpenGL ES支援，可以把eglUpdateBufferSettings()註解掉，避免編譯錯誤；如果需要OpenGL ES支援，則需要先編譯swiftshader，然後將libEGL.so、libGLESv2.so複製到SDL2目錄編譯<br><br>
+
 使用方式：
 </p>
 <pre>
