Pro1 X How to build retroarch.

--- a/phone.htm
+++ b/phone.htm
@@ -2021,6 +2021,17 @@ F(x)tec Pro1 X</h3>
     <a href="phone/pro1x/wd_fix_clip.htm">
     解決"Failed to start Clipboard manager service"問題</a><br>  
 
+  &emsp;&emsp;&oplus;
+  RetroArch<br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pro1x/build_ra.htm">
+    build retroarch</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pro1x/fix_fetch_cores.htm">
+    解決"Fetching core list"失敗的問題</a><br>
+
 &oplus;
 <b>Sailfish</b><br>
 
