Pro1 X This is why the performance is bad while running retroarch.

--- a/phone.htm
+++ b/phone.htm
@@ -2025,6 +2025,10 @@ F(x)tec Pro1 X</h3>
   RetroArch<br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pro1x/perf.htm">
+    效能不好的原因</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/pro1x/build_ra.htm">
     build retroarch</a><br>
 
