Pro1 X How to root android.

--- a/phone.htm
+++ b/phone.htm
@@ -1981,8 +1981,16 @@ F(x)tec Pro1 X</h3>
 <b>Android</b><br>
 
   &emsp;&emsp;&lowast;
+  <a href="phone/pro1x/root.htm">
+  root系統</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="phone/pro1x/install_android.htm">
   安裝系統(QFIL)</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="phone/pro1x/fix_sensor.htm">
+  解決畫面無法旋轉的問題</a><br>
 
 &oplus;
 <b>Droidian</b><br>
