--- a/umpc/c860/debian7_setup.htm
+++ b/umpc/c860/debian7_setup.htm
@@ -64,13 +64,12 @@
 <img src="debian7_setup/1.jpg" class="maxSize"><br><br>
 
 安裝系統：<br>
-1. 下載<a href="https://github.com/steward-fu/sl-c700/releases/download/v1.12/adds_c860.tar.gz">adds_c860.tar.gz</a><br>
-2. 下載<a href="https://github.com/steward-fu/sl-c700/releases/download/v1.12/debian7_base.tar.gz">debian7_base.tar.gz</a><br>
-3. 格式化SDCard(4GB)成ext4，格式化記得使用(-O^metadata_csum)<br>
-4. 將debian7_base.tar.gz、adds_c860.tar.gz解壓縮至SDCard根目錄<br>
-5. 將SDCard插入機器<br>
-6. 透過選單啟動<b>Debian 7</b><br>
-7. 帳號使用root:root<br>
+1. 下載<a href="https://github.com/steward-fu/sharp-zaurus/releases/download/v1.12/debian7_c860.tar.gz">debian7_c860.tar.gz</a><br>
+2. 格式化CFCard(4GB)成ext4，格式化記得使用(-O^metadata_csum)<br>
+3. 將debian7_c860.tar.gz解壓縮至CFCard根目錄<br>
+4. 將CFCard插入機器<br>
+5. 透過選單啟動<b>Debian 7</b><br>
+6. 帳號使用root:root<br>
 <img src="debian7_setup/2.jpg" class="maxSize"><br>
 <img src="debian7_setup/3.jpg" class="maxSize"><br><br>
 
