Pro1 X How to install XServer XSDL.

--- a/phone.htm
+++ b/phone.htm
@@ -931,7 +931,7 @@ Cosmo Communicator</h3>
   Build Kernel 4.4.146</a><br>
 
   &emsp;&emsp;&oplus;
-  <b>XServer XSDL</b><br>
+  XServer XSDL<br>
   
       &emsp;&emsp;&emsp;&emsp;&lowast;
       <a href="phone/cosmo/xsdl_setup.htm">
@@ -1992,6 +1992,13 @@ F(x)tec Pro1 X</h3>
   <a href="phone/pro1x/fix_sensor.htm">
   解決畫面無法旋轉的問題</a><br>
 
+  &emsp;&emsp;&oplus;
+  XServer XSDL<br>
+  
+      &emsp;&emsp;&emsp;&emsp;&lowast;
+      <a href="phone/pro1x/xsdl_setup.htm">
+      安裝Debian系統</a><br>
+
 &oplus;
 <b>Droidian</b><br>
 
@@ -2123,7 +2130,7 @@ Unihertz Titan</h3>
   安裝USB Prolific PL2303驅動程式</a><br>
   
   &emsp;&emsp;&oplus;
-  <b>XServer XSDL</b><br>
+  XServer XSDL<br>
   
       &emsp;&emsp;&emsp;&emsp;&lowast;
       <a href="phone/titan/xsdl_setup.htm">
