--- a/phone/pro1x/xsdl_setup.htm
+++ b/phone/pro1x/xsdl_setup.htm
@@ -45,7 +45,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Cosmo Communicator &gt;&gt; Android &gt;&gt; XServer XSDL</h3>
+<h3>Pro1 X &gt;&gt; Android &gt;&gt; XServer XSDL</h3>
 <p><b>安裝Debian系統</b></p>
 <hr size="1">
 <p>
@@ -68,14 +68,13 @@ SSH
 Enable: Checked
 </pre>
 <p>
-4. XServer XSDL配置：1080x540、DPIx2<br>
+4. XServer XSDL配置：1080x540、DPIx1<br>
 5. Termux
 </p>
 <pre>
-Titan:/ $ su
-Titan:/ # termux
-~ # mount -o remount,rw /
-~ # vim /system/bin/cli
+$ pkg install tsu
+$ cd 
+$ vim ../usr/bin/cli
     #!/system/bin/sh
     if [ `whoami` != "root" ]; then
         echo "run me as root"
@@ -86,11 +85,10 @@ Titan:/ # termux
     ssh xxx@127.0.0.1
     /data/data/ru.meefik.linuxdeploy/files/bin/linuxdeploy -p linux stop -u
 
-~ # chmod a+x /system/bin/cli
-~ # mount -o remount,ro /
-~ # cli
+$ chmod a+x ../usr/bin/cli
+$ sudo cli
 xxx@localhost:~$
-xxx@localhost:~$ DISPLAY=:0 startxfce4
+xxx@localhost:~$ DISPLAY=:0 PULSE_SERVER=127.0.0.1:4713 startxfce4
 </pre>
 <p>
 完成<br>
