C3200 How to install zubuntu.

--- a/umpc.htm
+++ b/umpc.htm
@@ -603,6 +603,13 @@ build kernel 4.14.18</a><br>
   安裝系統</a><br>
 
 &oplus;
+<b>Zubuntu</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="umpc/c3200/zubuntu_setup.htm">
+  安裝系統</a><br>
+
+&oplus;
 <b>Arch Linux</b><br>
   &emsp;&emsp;&lowast;
   <a href="umpc/c3200/arch_setup.htm">
