C3200 How to install debian.

--- a/umpc.htm
+++ b/umpc.htm
@@ -596,6 +596,13 @@ build kernel 4.14.18</a><br>
   安裝系統</a><br>
 
 &oplus;
+<b>Debian</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="umpc/c3200/debian7_setup.htm">
+  安裝系統</a><br>
+
+&oplus;
 <b>pdaXrom</b><br>
 
   &emsp;&emsp;&lowast;
