Canon wordtank V903 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -89,6 +89,7 @@
   <a href="#mi-p10-s"><img src="img/photos/mi-p10-s.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus MI-P10-S"/></a>
   <a href="#mi-ex1"><img src="img/photos/mi-ex1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus MI-EX1"/></a>
   <a href="#mi-tr1"><img src="img/photos/mi-tr1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus MI-TR1"/></a>
+  <a href="#v903"><img src="img/photos/v903.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V903"/></a>
   <a href="#zipit1"><img src="img/photos/zipit1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z1"/></a>
   <a href="#zipit2"><img src="img/photos/zipit2.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z2"/></a>
   <a href="#zipit3"><img src="img/photos/zipit3.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z3"/></a>
@@ -746,6 +747,16 @@ Zaurus MI-TR1</h3>
 
 &lowast;
 <a href="umpc/mi-tr1/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="v903"></div>
+<h3><img src="img/photos/v903.jpg" class="floatLeft"/>
+Canon wordtank V903</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/v903/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
