CASIO EX-word DATAPLUS 4 XD-SF6350 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -92,6 +92,7 @@
   <a href="#pw-g5200"><img src="img/photos/pw-g5200.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP PW-G5200"/></a>
   <a href="#v903"><img src="img/photos/v903.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V903"/></a>
   <a href="#ew-v3600l"><img src="img/photos/ew-v3600l.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EW-V3600L"/></a>
+  <a href="#xd-sf6350"><img src="img/photos/xd-sf6350.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 4 XD-SF6350"/></a>
   <a href="#xd-b4850"><img src="img/photos/xd-b4850.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 6 XD-B4850"/></a>
   <a href="#zipit1"><img src="img/photos/zipit1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z1"/></a>
   <a href="#zipit2"><img src="img/photos/zipit2.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z2"/></a>
@@ -780,6 +781,16 @@ CASIO EW-V3600L</h3>
 
 &lowast;
 <a href="umpc/ew-v3600l/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="xd-sf6350"></div>
+<h3><img src="img/photos/xd-sf6350.jpg" class="floatLeft"/>
+CASIO EX-word DATAPLUS 4 XD-SF6350</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/xd-sf6350/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
