--- a/umpc.htm
+++ b/umpc.htm
@@ -93,6 +93,7 @@
   <a href="#v903"><img src="img/photos/v903.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V903"/></a>
   <a href="#ew-v3600l"><img src="img/photos/ew-v3600l.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EW-V3600L"/></a>
   <a href="#xd-sf6350"><img src="img/photos/xd-sf6350.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 4 XD-SF6350"/></a>
+  <a href="#xd-a4800"><img src="img/photos/xd-a4800.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 5 XD-A4800"/></a>
   <a href="#xd-b4850"><img src="img/photos/xd-b4850.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 6 XD-B4850"/></a>
   <a href="#zipit1"><img src="img/photos/zipit1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z1"/></a>
   <a href="#zipit2"><img src="img/photos/zipit2.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zipit Z2"/></a>
@@ -791,6 +792,16 @@ CASIO EX-word DATAPLUS 4 XD-SF6350</h3>
 
 &lowast;
 <a href="umpc/xd-sf6350/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="xd-a4800"></div>
+<h3><img src="img/photos/xd-a4800.jpg" class="floatLeft"/>
+CASIO EX-word DATAPLUS 5 XD-A4800</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/xd-a4800/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
