--- a/umpc.htm
+++ b/umpc.htm
@@ -95,6 +95,7 @@
   <a href="#xd-f9000"><img src="img/photos/xd-f9000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word XD-F9000"/></a>
   <a href="#xd-lp9300"><img src="img/photos/xd-lp9300.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word XD-LP9300"/></a>
   <a href="#xd-sf6200"><img src="img/photos/xd-sf6200.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 4 XD-SF6200"/></a>
+  <a href="#xd-sf6300"><img src="img/photos/xd-sf6300.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 4 XD-SF6300"/></a>
   <a href="#xd-sf6350"><img src="img/photos/xd-sf6350.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 4 XD-SF6350"/></a>
   <a href="#xd-a4800"><img src="img/photos/xd-a4800.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 5 XD-A4800"/></a>
   <a href="#xd-b4850"><img src="img/photos/xd-b4850.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 6 XD-B4850"/></a>
@@ -815,6 +816,16 @@ CASIO EX-word DATAPLUS 4 XD-SF6200</h3>
 
 &lowast;
 <a href="umpc/xd-sf6200/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="xd-sf6300"></div>
+<h3><img src="img/photos/xd-sf6300.jpg" class="floatLeft"/>
+CASIO EX-word DATAPLUS 4 XD-SF6300</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/xd-sf6300/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
