CASIO EX-word DATAPLUS 2 XD-ST4800 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -94,6 +94,7 @@
   <a href="#ew-v3600l"><img src="img/photos/ew-v3600l.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EW-V3600L"/></a>
   <a href="#xd-f9000"><img src="img/photos/xd-f9000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word XD-F9000"/></a>
   <a href="#xd-lp9300"><img src="img/photos/xd-lp9300.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word XD-LP9300"/></a>
+  <a href="#xd-st4800"><img src="img/photos/xd-st4800.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 2 XD-ST4800"/></a>
   <a href="#xd-sf6200"><img src="img/photos/xd-sf6200.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 4 XD-SF6200"/></a>
   <a href="#xd-sf6300"><img src="img/photos/xd-sf6300.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 4 XD-SF6300"/></a>
   <a href="#xd-sf6350"><img src="img/photos/xd-sf6350.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word DATAPLUS 4 XD-SF6350"/></a>
@@ -806,6 +807,16 @@ CASIO EX-word XD-LP9300</h3>
 
 &lowast;
 <a href="umpc/xd-lp9300/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="xd-st4800"></div>
+<h3><img src="img/photos/xd-st4800.jpg" class="floatLeft"/>
+CASIO EX-word DATAPLUS 2 XD-ST4800</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/xd-st4800/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
