SHARP Papyrus PW-AT760 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -89,6 +89,7 @@
   <a href="#mi-p10-s"><img src="img/photos/mi-p10-s.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus MI-P10-S"/></a>
   <a href="#mi-ex1"><img src="img/photos/mi-ex1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus MI-EX1"/></a>
   <a href="#mi-tr1"><img src="img/photos/mi-tr1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus MI-TR1"/></a>
+  <a href="#pw-at760"><img src="img/photos/pw-at760.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Papyrus PW-AT760"/></a>
   <a href="#pw-g5200"><img src="img/photos/pw-g5200.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP PW-G5200"/></a>
   <a href="#v903"><img src="img/photos/v903.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V903"/></a>
   <a href="#ew-v3600l"><img src="img/photos/ew-v3600l.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EW-V3600L"/></a>
@@ -757,6 +758,16 @@ Zaurus MI-TR1</h3>
 
 &lowast;
 <a href="umpc/mi-tr1/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="pw-at760"></div>
+<h3><img src="img/photos/pw-at760.jpg" class="floatLeft"/>
+SHARP Papyrus PW-AT760</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/pw-at760/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
