SHARP Papyrus PW-U5100 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -90,6 +90,7 @@
   <a href="#mi-ex1"><img src="img/photos/mi-ex1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus MI-EX1"/></a>
   <a href="#mi-tr1"><img src="img/photos/mi-tr1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus MI-TR1"/></a>
   <a href="#pw-at760"><img src="img/photos/pw-at760.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Papyrus PW-AT760"/></a>
+  <a href="#pw-u5100"><img src="img/photos/pw-u5100.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Papyrus PW-U5100"/></a>
   <a href="#pw-g5200"><img src="img/photos/pw-g5200.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP PW-G5200"/></a>
   <a href="#v903"><img src="img/photos/v903.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V903"/></a>
   <a href="#ew-v3600l"><img src="img/photos/ew-v3600l.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EW-V3600L"/></a>
@@ -768,6 +769,16 @@ SHARP Papyrus PW-AT760</h3>
 
 &lowast;
 <a href="umpc/pw-at760/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="pw-u5100"></div>
+<h3><img src="img/photos/pw-u5100.jpg" class="floatLeft"/>
+SHARP Papyrus PW-U5100</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/pw-u5100/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
