SHARP PW-9500 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -91,6 +91,7 @@
   <a href="#mi-tr1"><img src="img/photos/mi-tr1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus MI-TR1"/></a>
   <a href="#pw-at760"><img src="img/photos/pw-at760.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Papyrus PW-AT760"/></a>
   <a href="#pw-u5100"><img src="img/photos/pw-u5100.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Papyrus PW-U5100"/></a>
+  <a href="#pw-9500"><img src="img/photos/pw-9500.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP PW-9500"/></a>
   <a href="#pw-g5200"><img src="img/photos/pw-g5200.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP PW-G5200"/></a>
   <a href="#v903"><img src="img/photos/v903.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V903"/></a>
   <a href="#ew-v3600l"><img src="img/photos/ew-v3600l.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EW-V3600L"/></a>
@@ -779,6 +780,16 @@ SHARP Papyrus PW-U5100</h3>
 
 &lowast;
 <a href="umpc/pw-u5100/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="pw-9500"></div>
+<h3><img src="img/photos/pw-9500.jpg" class="floatLeft"/>
+SHARP PW-9500</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/pw-9500/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
