--- a/umpc.htm
+++ b/umpc.htm
@@ -93,6 +93,7 @@
   <a href="#pw-u5100"><img src="img/photos/pw-u5100.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP Papyrus PW-U5100"/></a>
   <a href="#pw-9500"><img src="img/photos/pw-9500.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP PW-9500"/></a>
   <a href="#pw-g5200"><img src="img/photos/pw-g5200.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SHARP PW-G5200"/></a>
+  <a href="#sr9200"><img src="img/photos/sr9200.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SEIKO SR9200"/></a>
   <a href="#v903"><img src="img/photos/v903.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Canon wordtank V903"/></a>
   <a href="#ew-v3600l"><img src="img/photos/ew-v3600l.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EW-V3600L"/></a>
   <a href="#xd-f9000"><img src="img/photos/xd-f9000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CASIO EX-word XD-F9000"/></a>
@@ -800,6 +801,16 @@ SHARP PW-G5200</h3>
 
 &lowast;
 <a href="umpc/pw-g5200/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
+<div id="sr9200"></div>
+<h3><img src="img/photos/sr9200.jpg" class="floatLeft"/>
+SEIKO SR9200</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/sr9200/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
