C3200 How to mod hardware switch to avoid power leakage.

--- a/umpc.htm
+++ b/umpc.htm
@@ -578,6 +578,10 @@ Recovery</a><br>
 替換內部HDD</a><br>
 
 &lowast;
+<a href="umpc/c3200/mod.htm">
+電源開關改造</a><br>
+
+&lowast;
 <a href="umpc/c3200/calibre.htm">
 如何校準電池</a><br>
 
