SHARP Papyrus PW-AT760 Added review page.

--- a/umpc.htm
+++ b/umpc.htm
@@ -776,6 +776,10 @@ SHARP Papyrus PW-AT760</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="umpc/pw-at760/review.htm">
+介紹</a><br>
+
+&lowast;
 <a href="umpc/pw-at760/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
