SHARP PW-G5200 Added review page.

--- a/umpc.htm
+++ b/umpc.htm
@@ -810,6 +810,10 @@ SHARP PW-G5200</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="umpc/pw-g5200/review.htm">
+介紹</a><br>
+
+&lowast;
 <a href="umpc/pw-g5200/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
