SHARP Brain PW-AC880 Added review page.

--- a/umpc.htm
+++ b/umpc.htm
@@ -824,6 +824,10 @@ SHARP Brain PW-AC880</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="umpc/pw-ac880/review.htm">
+介紹</a><br>
+
+&lowast;
 <a href="umpc/pw-ac880/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
