--- a/umpc/pw-ac880/review.htm
+++ b/umpc/pw-ac880/review.htm
@@ -45,73 +45,22 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>SHARP Brain PW-AC880</h3>
-<p><b>拆機</b></p>
+<p><b>介紹</b></p>
 <hr size="1">
 <p>
-正面<br>
-<img src="teardown/1.jpg" class="maxSize"><br><br>
-
-下邊<br>
-<img src="teardown/2.jpg" class="maxSize"><br><br>
-
-側邊<br>
-<img src="teardown/3.jpg" class="maxSize"><br><br>
-
-上邊<br>
-<img src="teardown/4.jpg" class="maxSize"><br><br>
-
-側邊<br>
-<img src="teardown/5.jpg" class="maxSize"><br><br>
-
-展開<br>
-<img src="teardown/6.jpg" class="maxSize"><br><br>
-
-背面<br>
-<img src="teardown/7.jpg" class="maxSize"><br><br>
-
-3.7v 2300mA<br>
-<img src="teardown/8.jpg" class="maxSize"><br><br>
-
-電池槽<br>
-<img src="teardown/9.jpg" class="maxSize"><br><br>
-
-背蓋<br>
-<img src="teardown/10.jpg" class="maxSize"><br><br>
-
-PCB<br>
-<img src="teardown/11.jpg" class="maxSize"><br>
-<img src="teardown/12.jpg" class="maxSize"><br>
-<img src="teardown/13.jpg" class="maxSize"><br><br>
-
-YMU804-P<br>
-<img src="teardown/14.jpg" class="maxSize"><br><br>
-
-小屏<br>
-<img src="teardown/15.jpg" class="maxSize"><br>
-<img src="teardown/16.jpg" class="maxSize"><br><br>
-
-鍵盤<br>
-<img src="teardown/17.jpg" class="maxSize"><br>
-<img src="teardown/18.jpg" class="maxSize"><br><br>
-
-PCB<br>
-<img src="teardown/19.jpg" class="maxSize"><br><br>
-
-TMPA910CRAXBG、K4M51323PE-HG75<br>
-<img src="teardown/20.jpg" class="maxSize"><br><br>
-
-F256BNB-PTSL10、PH1372WS<br>
-<img src="teardown/21.jpg" class="maxSize"><br><br>
-
-3557 N8664<br>
-<img src="teardown/22.jpg" class="maxSize"><br><br>
-
-鍵盤面<br>
-<img src="teardown/23.jpg" class="maxSize"><br><br>
-
-屏<br>
-<img src="teardown/24.jpg" class="maxSize">
+簡要規格
 </p>
+<table>
+  <tr><th>CPU</th><td>Toshiba TMPA910CRAXBG TX09 200MHZ</td></tr>
+  <tr><th>RAM</th><td>64MB</td></tr>
+  <tr><th>Flash</th><td>32MB</td></tr>
+  <tr><th>Screen</th><td>5.0" 480x320 電阻觸控</td></tr>
+  <tr><th>Slot</th><td>SDCard</td></tr>
+  <tr><th>Keyboard</th><td>QWERTY</td></tr>
+  <tr><th>Battery</th><td>3.7v 2300mA</td></tr>
+  <tr><th>Dimension</th><td>145mm x 108mm x 20mm</td></tr>
+  <tr><th>Weight</th><td>360g</td></tr>
+</table><br>
 
 <p>
 <br><a href="../../umpc.htm">返回上一頁</a>
