SHARP Brain PW-GC590 Added review page.

--- a/umpc.htm
+++ b/umpc.htm
@@ -838,6 +838,10 @@ SHARP Brain PW-GC590</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="umpc/pw-gc590/review.htm">
+介紹</a><br>
+
+&lowast;
 <a href="umpc/pw-gc590/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
